Fix swagger config
