# internal/handler/handler.go
@@ -64,12 +64,33 @@ func (h *httpHandler) Stop(ctx context.Context) error {
 	return h.server.Shutdown(ctx)
 }
 
+// HealthCheck check if server is running
+// @Summary health check
+// @Schemas
+// @Description
+// @Tags
+// @Accept json
+// @Produce json
+// @Success 200 {object} map[string]string "pong"
+// @Failure 404 {object} error "Not Found"
+// @Router /ping [get]
 func (h *httpHandler) healthCheck() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		ctx.JSON(200, gin.H{"data": "pong"})
 	}
 }
 
+// Version handles GET request for fetching current version
+// @Summary fetches version
+// @Schemas
+// @Description
+// @Tags
+// @Accept json
+// @Produce json
+// @Success 200 {object} map[string]string "Returns current version"
+// @Failure 400 {object} error "Bad Request"
+// @Failure 500 {object} error "Internal Server Error"
+// @Router /version [get]
 func (h *httpHandler) version() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		ctx.JSON(200, gin.H{"version": API_VERSION})
